# JIPP2

./: CMakeLists.txt
Copyingclass/include/: Point.h
Copyingclass/src/: Point.cpp  main.cpp
FirstClass/: CMakeLists.txt  Kula.h  Prostopadloscian.cpp  Prostopadloscian.h
Projekt_koncowy/: CMakeLists.txt
Projekt_koncowy/Database/: CMakeLists.txt  Products.txt  Users.txt
Projekt_koncowy/ShopApp/: CMakeLists.txt
Projekt_koncowy/ShopApp/include/: Polymorphism.h  Printer.h  Product.h  User.h
Projekt_koncowy/ShopApp/src/: Polymorphism.cpp  Product.cpp  User.cpp  main.cpp
Projekt_koncowy/ShopLib/: CMakeLists.txt
Projekt_koncowy/ShopLib/include/: ShopLib.h
Projekt_koncowy/ShopLib/src/: ShopLib.cpp
allocation_basis/: CMakeLists.txt  main.cpp
firstLib/: CMakeLists.txt
firstLib/src/: lib.cpp
firstLibCall/: CMakeLists.txt
firstLibCall/src/: main.cpp
lab10_szblony/: CMakeLists.txt  main.cpp
lab5/: CMakeLists.txt
lab5/include/: car.h
lab5/src/: car.cpp  main.cpp
lab6_node/: CMakeLists.txt
lab6_node/src/: main.cpp  node.cpp  node.h
lab6_vector/: CMakeLists.txt
lab6_vector/src/: main.cpp  vector.cpp  vector.h
lab9/: CMakeLists.txt  Stop.cpp  vExample.cpp
matrixApp/matrixApp/: CMakeLists.txt  main.cpp
matrixApp/matrixLib/: CMakeLists.txt
matrixApp/matrixLib/include/: matrixLib.h
matrixApp/matrixLib/src/: matrixLib.cpp
simpleCalc/: CMakeLists.txt
simpleCalc/include/: functions.h
simpleCalc/src/: HelloWorld.cpp  functions.cpp  main.cpp
structsEcercises/: CMakeLists.txt
structsEcercises/src/: main.cpp
