cmake_minimum_required(VERSION 3.16)


add_subdirectory(allocation_basis)
add_subdirectory(simpleCalc)
add_subdirectory(structsEcercises)
add_subdirectory(FirstClass)
add_subdirectory(matrixApp)
#add_subdirectory(firstLib)
#add_subdirectory(firstLibCall)

add_subdirectory(Copyingclass)
add_subdirectory(lab5)
